# In3110-UIO

./: README.md
assignment1/: gitconflict.txt  myfirstcommit.txt
assignment2/: analyze_pollution_data.py
assignment2/analytic_tools/: utilities.py
assignment2/tests/: test_analyze_pollution_data.py  test_utilities.py
assignment3/: README.md  pyproject.toml  timing-report.txt
assignment3/in3110_instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/test/: test_numba.py  test_numpy.py  test_python.py
assignment4/: fetch_olympic_statistics.py  filter_urls.py  find_anniversaries.py  requesting_urls.py
assignment4/tables_of_anniversaries/: anniversaries_april.md  anniversaries_august.md  anniversaries_december.md  anniversaries_february.md  anniversaries_january.md  anniversaries_july.md  anniversaries_june.md  anniversaries_march.md  anniversaries_may.md  anniversaries_november.md  anniversaries_october.md  anniversaries_september.md
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py
assignment5/documentation/: conf.py
assignment5/documentation/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  strompris.html
assignment5/documentation/_build/.doctrees/: environment.pickle  index.doctree  strompris.doctree
assignment5/documentation/_build/_sources/: index.rst.txt  strompris.rst.txt
assignment5/documentation/_build/_static/: documentation_options.js
assignment5/templates/: strompris.html
